--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textlint-rule-spellcheck-growthbeat-word",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "textlint rule: spell check growthbeat word.",
   "author": "Sota Yamashita <sota_yamashita@sirok.co.jp>",
   "repository": "sotayamashita/textlint-rule-spellcheck-growthbeat-word",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "growthbeat-word-rules": "0.0.2",
+    "structured-source": "^3.0.2",
     "textlint-rule-helper": "^1.1.5"
   },
   "peerDependencies": {
